adjustments pertaining to launching of custom skin test app and pdp adjustments

--- a/assets/pdp-v2.css
+++ b/assets/pdp-v2.css
@@ -511,6 +511,7 @@
 	display: flex;
 	gap: 15px;
 	align-items: center;
+    justify-content: center;
 }
 .pdp-cta__sticky .pdp-cta__checkout_btn {
 	width: 100%;
