adjustment to pdp and skin test

--- a/sections/pdp-v2.liquid
+++ b/sections/pdp-v2.liquid
@@ -43,7 +43,7 @@
 			<p class="pdp-customer_info__name__label_name">Michael</p>
 		</div>
 		{% endcomment %}
-		<div class="pdp-customer_info__row pdp-customer_info__matchid">
+		<div class="pdp-customer_info__row pdp-customer_info__matchid hidden">
 			<div class="pdp-customer_info__header">
 				MATCH ID
 			</div>
