--- a/snippets/pdp-v2-js.liquid
+++ b/snippets/pdp-v2-js.liquid
@@ -1002,7 +1002,7 @@
 					skinGoalsEl.innerText = translatedSkinGoals.join(", ");
 				}
                 if (quizData.short_skin_id) {
-                  parentMatchIdEl.classList.remove("hidden");
+                  //parentMatchIdEl.classList.remove("hidden");
                   matchIdEl.innerText = quizData.short_skin_id;
                 } else {
                   parentMatchIdEl.classList.add("hidden");
