--- a/assets/skintest.css
+++ b/assets/skintest.css
@@ -34,22 +34,28 @@
   /* background: rgb(244 222 222); */
   background: transparent;
   padding: 10px 15px;
+  margin-top: 50px;
 }
 .qtnr__page_header {
   display: flex;
   justify-content: center;
-  align-content: center;
   position: relative;
+  width: 80%;
+  margin: 0 auto;
+  align-items: center;
 }
 .qtnr__page_nav_back {
   display: inline-block;
-  position: absolute;
+  /* position: absolute; */
   left: 0;
   top: 50%;
   outline: 0;
   border: 0;
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
   background: transparent!important;
+  margin-right: 30px;
+  flex: 1;
+  padding: 0;
 }
 .qtnr__page_nav_back svg {
   display: block;
@@ -157,7 +163,7 @@
 }
 .qtnr__navigation__next {
   padding: 10px;
-  background: #B4CFEB;
+  background: #3B607B;
   color: #fff;
   font-size: 1.1rem;
   font-weight: 400;
@@ -407,7 +413,13 @@
   font-size: 1rem;
   /* border: 1px solid #000; */
   border: 1px solid rgba(55, 55, 54, 0.1);
+  transition: 0.7s;
 }
+.qtnr__answer__choice:hover {
+  border: 1px solid rgba(55, 55, 54, 1);
+  transition: 0.7s;
+}
+
 .qtnr__answer__choice__text {
   display: flex;
   flex-direction: column;
@@ -515,6 +527,9 @@ div[data-question-id="pigmenttationType"] .qtnr__answer__choice {
 .qtnr__answer__choice__no_border {
   border: 0px;
 }
+.qtnr__answer__choice__no_border:hover {
+  border: 0px;
+}
 .qtnr__answer__choice__white_bg {
   background: #fff;
 }
@@ -524,7 +539,7 @@ div[data-question-id="pigmenttationType"] .qtnr__answer__choice {
 .qtnr__answer__item.multiple-selected {
   /* background: rgb(197 108 108); */
   /* background: #000; */
-  border: 2px solid #B4CFEB;
+  border: 2px solid #3B607B;
 }
 .qtnr__answer__item.choice__styling_flex_layout.styling_flex_layout__single {
   flex: 100%;
@@ -601,7 +616,7 @@ div[data-question-id="pigmenttationType"] .qtnr__answer__item.choice__styling_fl
 .choice__boolean__outer_circle {
   width: 20px;
   height: 20px;
-  border: 1px solid #B4CFEB;
+  border: 1px solid #3B607B;
   border-radius: 100px;
   display: flex;
   justify-content: center;
@@ -705,14 +720,14 @@ div[data-question-id="pigmenttationType"] .qtnr__answer__item.choice__styling_fl
 
 /* PROGRESS BAR */
 .qtnr__progress_bar {
-  width: 100%;
   height: 5px;
   border: #eee;
   background: #eee;
   display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
+  /* position: absolute; */
+  /* top: 0; */
+  /* left: 0; */
+  flex: 12;
 }
 .qtnr__progress {
   background: #333;
