--- a/assets/styles.css.liquid
+++ b/assets/styles.css.liquid
@@ -6549,7 +6549,7 @@ body:not(.tab-used) .main-search__form .id-main-search__product-types select:foc
 
 @media (min-width: 768px) {
   .has-full-width-section + .has-full-width-section {
-    margin-top: -{{ section_padding }}em !important;
+    /* margin-top: -{{ section_padding }}em !important; */
   }
 
   #shopify-section-template--16144206168332__1660744198f4fe1d1c{
@@ -13585,8 +13585,8 @@ h1, h2, h3, h4, h5, h6, strong {
 
 @media screen and (max-width: 767px) {
   #content .section.rich-text {
-    padding-top: 2.5em !important;
-    padding-bottom: 2.5em !important;
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
   }
   
   .template-sfx-about-us #content .section.rich-text {
@@ -13600,8 +13600,8 @@ h1, h2, h3, h4, h5, h6, strong {
   }
   
   .template-collection #content .section.rich-text, .template-sfx-about-us #content .section.rich-text {
-    margin-top:0px !important;
-    margin-bottom:0px !important;}
+    margin-top:0px;
+    margin-bottom:0px;}
 }
 
 
@@ -13679,8 +13679,8 @@ h1, h2, h3, h4, h5, h6, strong {
 
 
 .template-collection #content .rich-text.section {
-  padding-top: 1.5em !important;
-  padding-bottom: 0 !important;
+  padding-top: 1.5em;
+  padding-bottom: 0;
 }
 .template-collection .product-block .product-block__inner {
   padding: 20px;
@@ -13945,8 +13945,8 @@ h1, h2, h3, h4, h5, h6, strong {
 @media screen and (min-width: 768px) {
   .template-product #content .section.product-container {
     max-width: 1000px;
-    padding-top: 2.5em !important;
-    padding-bottom: 2.5em !important;
+    padding-top: 2.5em;
+    padding-bottom: 2.5em;
   }
   .template-product #content .section.product-container .product-gallery {
     width: 50%;
