--- a/assets/currency_selector.css
+++ b/assets/currency_selector.css
@@ -1,3 +1,6 @@
+.image-with-text__text.align-left.cc-animate-init.-in.cc-animate-complete {
+    padding: 0 10px;
+}
 .localization #CurrencyBtn {
   border: none;
   font-weight: 300;
