--- a/snippets/pdp-v2-js.liquid
+++ b/snippets/pdp-v2-js.liquid
@@ -1014,225 +1014,224 @@
 
 	async function loadPersonalizedCreamInciDataSummary(inciData) {
 		let inciListDay = document.querySelector(".pdp-product__incis__personalized__day");
-	let inciListNight = document.querySelector(".pdp-product__incis__personalized__night");
-			if (inciData && inciData.ingredients && inciData.ingredients.length > 0) {
-		await Promise.all(inciData.ingredients.map((inci) => {
-			if (inci.ofCream.includes('day')) {
-				inciListDay.insertAdjacentHTML('beforeend', `
-							<div class="pdp-product__incis__item">
-								<img width="50" height="50" src="${inci.imageUrl}?w=50" alt="${inci.name}" />
-								<p class="pdp-product__inci__title">${inci.name}</p>
-							</div>
-						`);
-			}
-			if (inci.ofCream.includes('night')) {
-				inciListNight.insertAdjacentHTML('beforeend', `
-							<div class="pdp-product__incis__item">
-								<img width="50" height="50" src="${inci.imageUrl}?w=50" alt="${inci.name}" />
-								<p class="pdp-product__inci__title">${inci.name}</p>
-							</div>
-						`);
-			}
-		}));
-			}
+		let inciListNight = document.querySelector(".pdp-product__incis__personalized__night");
+		if (inciData && inciData.ingredients && inciData.ingredients.length > 0) {
+			await Promise.all(inciData.ingredients.map((inci) => {
+				if (inci.ofCream.includes('day')) {
+					inciListDay.insertAdjacentHTML('beforeend', `
+						<div class="pdp-product__incis__item">
+							<img width="50" height="50" src="${inci.imageUrl}?w=50" alt="${inci.name}" />
+							<p class="pdp-product__inci__title">${inci.name}</p>
+						</div>
+					`);
+				}
+				if (inci.ofCream.includes('night')) {
+					inciListNight.insertAdjacentHTML('beforeend', `
+						<div class="pdp-product__incis__item">
+							<img width="50" height="50" src="${inci.imageUrl}?w=50" alt="${inci.name}" />
+							<p class="pdp-product__inci__title">${inci.name}</p>
+						</div>
+					`);
+				}
+			}));
 		}
+	}
 
 
 
 	async function loadPersonalizedProducts() {
 		console.log(standardProducts)
-			let dayLabel = ""
-	let nightLabel = "";
-	let description = "";
+		let dayLabel = ""
+		let nightLabel = "";
+		let description = "";
 
-	if (personalizedProduct) {
-		let targetParent = document.querySelector('.pdp-personalized_container');
-	let labelName = {
-		day: '',
-	night: ''
-				}
-	let creams = { };
-	let variants = {
-		day: {
-		"30ml": null,
-	"50ml": null,
-					},
-	night: {
-		"30ml": null,
-	"50ml": null,
-					},
-				}
+		if (personalizedProduct) {
+			let targetParent = document.querySelector('.pdp-personalized_container');
+			let labelName = {
+				day: '',
+				night: ''
+			}
+			let creams = { };
+			let variants = {
+				day: {
+					"30ml": null,
+					"50ml": null,
+				},
+				night: {
+					"30ml": null,
+					"50ml": null,
+				},
+			}
 
-	if (quizData) {
-					if (quizData.cream && quizData.cream.day) {
-		creams['day'] = quizData.cream.day.id;
-	labelName['day'] = quizData.cream.day.name ?? '';
-					}
-	if (quizData.cream && quizData.cream.night) {
-		creams['night'] = quizData.cream.night.id;
-	labelName['night'] = quizData.cream.night.name ?? '';
-					}
+			if (quizData) {
+				if (quizData.cream && quizData.cream.day) {
+					creams['day'] = quizData.cream.day.id;
+					labelName['day'] = quizData.cream.day.name ?? '';
 				}
+				if (quizData.cream && quizData.cream.night) {
+					creams['night'] = quizData.cream.night.id;
+					labelName['night'] = quizData.cream.night.name ?? '';
+				}
+			}
 	
-				await Promise.all(Object.keys(creams).map((cream) => {
-		let found = "";
-	if (cream.includes('day')) {
-		description = dayCreamDescription;
-					} else if (cream.includes('night')) {
-		description = nightCreamDescription;
-					}
-					personalizedProduct.variants.map(async (variant) => {
-						if (variant.sku.includes(cream) && variant.sku.includes(creams[cream])) {
-							if (cream.includes('day')) {
-								if (variant.sku.includes('day30')) {
-		variants['day']['30ml'] = variant;
-		let _dayCreamInActualCart = await personalizedCreamExistsInActualCart('day');
-		console.log("PC SPlan", personalizedProduct.selling_plan_groups)
-		if (!_dayCreamInActualCart) {
-			cartItems.push({
-				id: variant.id,
-			quantity: 1,
-			properties: personalizedCreamCartProperties['day'],
-			price: variant.price,
-			//selling_plan: personalizedProduct.selling_plan_groups[0].selling_plans[0].id
-											});
-		}
-	console.log(cartItems)
-								} else if (variant.sku.includes('day50')) {
-		variants['day']['50ml'] = variant;
+			await Promise.all(Object.keys(creams).map((cream) => {
+				let found = "";
+				if (cream.includes('day')) {
+					description = dayCreamDescription;
+				} else if (cream.includes('night')) {
+					description = nightCreamDescription;
+				}
+				personalizedProduct.variants.map(async (variant) => {
+					if (variant.sku.includes(cream) && variant.sku.includes(creams[cream])) {
+						if (cream.includes('day')) {
+							if (variant.sku.includes('day30')) {
+								variants['day']['30ml'] = variant;
+								let _dayCreamInActualCart = await personalizedCreamExistsInActualCart('day');
+								console.log("PC SPlan", personalizedProduct.selling_plan_groups)
+								if (!_dayCreamInActualCart) {
+									cartItems.push({
+										id: variant.id,
+										quantity: 1,
+										properties: personalizedCreamCartProperties['day'],
+										price: variant.price,
+										//selling_plan: personalizedProduct.selling_plan_groups[0].selling_plans[0].id
+									});
 								}
-							} else if (cream.includes('night')) {
-								if (variant.sku.includes('night30')) {
-									variants['night']['30ml'] = variant;
-		let _nightCreamInActualCart = await personalizedCreamExistsInActualCart('night');
-		if (!_nightCreamInActualCart) {
-			cartItems.push({
-				id: variant.id,
-				quantity: 1,
-				properties: personalizedCreamCartProperties['night'],
-				price: variant.price,
-			//selling_plan: personalizedProduct.selling_plan_groups[0].selling_plans[0].id
-			});
-		}
-	console.log(cartItems)
-								} else if (variant.sku.includes('night50')) {
-		variants['night']['50ml'] = variant;
+								console.log(cartItems)
+							} else if (variant.sku.includes('day50')) {
+								variants['day']['50ml'] = variant;
+							}
+						} else if (cream.includes('night')) {
+							if (variant.sku.includes('night30')) {
+								variants['night']['30ml'] = variant;
+								let _nightCreamInActualCart = await personalizedCreamExistsInActualCart('night');
+								if (!_nightCreamInActualCart) {
+									cartItems.push({
+										id: variant.id,
+										quantity: 1,
+										properties: personalizedCreamCartProperties['night'],
+										price: variant.price,
+									//selling_plan: personalizedProduct.selling_plan_groups[0].selling_plans[0].id
+									});
 								}
+								console.log(cartItems)
+							} else if (variant.sku.includes('night50')) {
+								variants['night']['50ml'] = variant;
 							}
 						}
-					});
-	productCount += 1;
-	pdpProductCount.innerText = `${productCount} ${productCountText}`;
-				}));
-
-				Object.keys(variants).map((cream) => {
-		let inciSection = '';
-	inciSection = `
-	<div class="pdp-product__incis pdp-product__incis__personalized__${cream.includes('day') ? 'day' : 'night'}"></div>
-	`;
-	if (inciData && inciData.ingredients && inciData.ingredients.length) {
-		inciData.ingredients.map((inci) => {
-			if (inci.ofCream.includes(cream)) {
-				inciItems += `
-									<div class="pdp-product__incis__item">
-										<img width="50" height="50" src="${inci.imageUrl}?w=50" alt="${inci.name}" />
-										<p class="pdp-product__inci__title">${inci.name}</p>
-									</div>
-								`;
-			}
-		});
-	inciSection = `
-	<div class="pdp-product__incis">
-		${inciItems}
-	</div>
-	`;
 					}
-	targetParent.insertAdjacentHTML('beforeend', `
-	<div class="pdp-product_group__container">
-		<div class="pdp-product_group__container__header">
-			<h2>${cream.includes('day') ? dayCreamHeaderText : nightCreamHeaderText}</h2>
-			<div class="pdp-product__header__cream_label">
-				${labelName[cream] && `
-											<img src="${creamLabelImgSrc}" alt="cream_label" class="pdp-product__cream_label__image" />
-											<span>${labelName[cream]}</span>
-										`}
-			</div>
-		</div>
-
-		<div class="pdp-product__grid">
-			<div class="pdp-product__grid__item">
-				<div class="pdp-product__info">
-					<div class="pdp-product__media">
-						<img
-							src="${personalizedProduct.featured_image}&width=150"
-							alt="${personalizedProduct.title}"
-							width="150"
-						/>
-					</div>
-					<div class="pdp-product__details">
-						<div class="pdp-product__price">
-                            <h3 style="color:#fb5250;" class="${window.location.pathname.includes('/ar-') ? 'ar-price-text-reduced' : ''}">${theme.formatMoney(variants[cream]['30ml'].price, theme.money_format)}</h3>
-							<h2 class="struck-out-price ${window.location.pathname.includes('/ar-') && 'ar-price-text-reduced'}">${theme.formatMoney(variants[cream]['50ml'].price, theme.money_format)}</h2>
-							<span>50ml</span>
-						</div>
-						<div class="pdp-product__review">
-							<div class="pdp-product__review_badge">
-								${personalizedProductJudgemeBadge}
-							</div>
-							<span class="pdp-product__review_rating">
-								${parseFloat(personalizedProductRating).toFixed(1)}/5.0
-							</span>
-						</div>
-						<div class="pdp-product__form">
-							<div class="pdp-product__form__variants">
-								<div
-									class="pdp-product__variant_option variant_option_personalized selected"
-									data-variant-id="${variants[cream]['30ml'].id}"
-									data-variant-price="${variants[cream]['30ml'].price}"
-                                    data-variant-sku="${variants[cream]['30ml'].sku}"
-									data-variant-for="${cream}"
-								>
-									${dispenserButtonText}
-								</div>
-								<div
-									class="pdp-product__variant_option variant_option_personalized"
-									data-variant-id="${variants[cream]['50ml'].id}"
-									data-variant-price="${variants[cream]['50ml'].price}"
-                                    data-variant-sku="${variants[cream]['50ml'].sku}"
-									data-variant-for="${cream}"
-								>
-									${jarButtonText}
-								</div>
-							</div>
-							<div class="pdp-product__quantity">
-								<div class="pdp-product__quantity__selector pdp-product__quantity__selector__dec" data-qty-for="${cream}">-</div>
-								<input class="pdp-product__quantity__selector pdp-product__quantity__selector__input" type="number" value="1" readonly />
-								<div class="pdp-product__quantity__selector pdp-product__quantity__selector__inc" data-qty-for="${cream}">+</div>
-							</div>
-							<div class="pdp-product__form__qty"></div>
-						</div>
-						<div class="pdp-product__description">
-							<div class="pdp-product__description__short">
-								${description.length > 250 ? `${description.substring(0, 250)}...<span class="pdp-product__description__show__toggle pdp-product__description__show__toggle__more">[${descriptionShowMoreText}]</span>` : description}
-							</div>
-							<div class="pdp-product__description__long hidden">
-								${description}...<span class="pdp-product__description__show__toggle pdp-product__description__show__toggle__less">[${descriptionShowLessText}]</span>
-							</div>
-						</div>
-						<div class="pdp-product__more_result pdp-product__more_result__cream" data-result-for="${cream.includes('day') ? 'day' : 'night'}cream">
-							<h5>${cream.includes('day') ? moreDayCreamButtonText : moreNightCreamButtonText}</h5>
-						</div>
-					</div>
-				</div>
-				${inciSection}
-			</div>
-		</div>
-	</div>
-	`
-	);
 				});
-			}
+				productCount += 1;
+				pdpProductCount.innerText = `${productCount} ${productCountText}`;
+			}));
+
+			Object.keys(variants).map((cream) => {
+				let inciItems = '';
+				let inciSection = '';
+				inciSection = `
+					<div class="pdp-product__incis pdp-product__incis__personalized__${cream.includes('day') ? 'day' : 'night'}"></div>
+				`;
+				if (quizData && quizData.cream && quizData.cream[cream] && quizData.cream[cream].ingredients.length) {
+					quizData.cream[cream].ingredients.map((inci) => {
+						inciItems += `
+							<div class="pdp-product__incis__item">
+								<img width="50" height="50" src="${inci.assets.reference.image.src}?w=50" alt="${inci.name.value}" />
+								<p class="pdp-product__inci__title">${inci.name.value}</p>
+							</div>
+						`;
+					});
+					inciSection = `
+						<div class="pdp-product__incis">
+							${inciItems}
+						</div>
+					`;
+				}
+				targetParent.insertAdjacentHTML('beforeend', `
+					<div class="pdp-product_group__container">
+						<div class="pdp-product_group__container__header">
+							<h2>${cream.includes('day') ? dayCreamHeaderText : nightCreamHeaderText}</h2>
+							<div class="pdp-product__header__cream_label">
+								${labelName[cream] && `
+									<img src="${creamLabelImgSrc}" alt="cream_label" class="pdp-product__cream_label__image" />
+									<span>${labelName[cream]}</span>
+								`}
+							</div>
+						</div>
+
+						<div class="pdp-product__grid">
+							<div class="pdp-product__grid__item">
+								<div class="pdp-product__info">
+									<div class="pdp-product__media">
+										<img
+											src="${personalizedProduct.featured_image}&width=150"
+											alt="${personalizedProduct.title}"
+											width="150"
+										/>
+									</div>
+									<div class="pdp-product__details">
+										<div class="pdp-product__price">
+											<h3 style="color:#fb5250;" class="${window.location.pathname.includes('/ar-') ? 'ar-price-text-reduced' : ''}">${theme.formatMoney(variants[cream]['30ml'].price, theme.money_format)}</h3>
+											<h2 class="struck-out-price ${window.location.pathname.includes('/ar-') && 'ar-price-text-reduced'}">${theme.formatMoney(variants[cream]['50ml'].price, theme.money_format)}</h2>
+											<span>50ml</span>
+										</div>
+										<div class="pdp-product__review">
+											<div class="pdp-product__review_badge">
+												${personalizedProductJudgemeBadge}
+											</div>
+											<span class="pdp-product__review_rating">
+												${parseFloat(personalizedProductRating).toFixed(1)}/5.0
+											</span>
+										</div>
+										<div class="pdp-product__form">
+											<div class="pdp-product__form__variants">
+												<div
+													class="pdp-product__variant_option variant_option_personalized selected"
+													data-variant-id="${variants[cream]['30ml'].id}"
+													data-variant-price="${variants[cream]['30ml'].price}"
+													data-variant-sku="${variants[cream]['30ml'].sku}"
+													data-variant-for="${cream}"
+												>
+													${dispenserButtonText}
+												</div>
+												<div
+													class="pdp-product__variant_option variant_option_personalized"
+													data-variant-id="${variants[cream]['50ml'].id}"
+													data-variant-price="${variants[cream]['50ml'].price}"
+													data-variant-sku="${variants[cream]['50ml'].sku}"
+													data-variant-for="${cream}"
+												>
+													${jarButtonText}
+												</div>
+											</div>
+											<div class="pdp-product__quantity">
+												<div class="pdp-product__quantity__selector pdp-product__quantity__selector__dec" data-qty-for="${cream}">-</div>
+												<input class="pdp-product__quantity__selector pdp-product__quantity__selector__input" type="number" value="1" readonly />
+												<div class="pdp-product__quantity__selector pdp-product__quantity__selector__inc" data-qty-for="${cream}">+</div>
+											</div>
+											<div class="pdp-product__form__qty"></div>
+										</div>
+										<div class="pdp-product__description">
+											<div class="pdp-product__description__short">
+												${description.length > 250 ? `${description.substring(0, 250)}...<span class="pdp-product__description__show__toggle pdp-product__description__show__toggle__more">[${descriptionShowMoreText}]</span>` : description}
+											</div>
+											<div class="pdp-product__description__long hidden">
+												${description}...<span class="pdp-product__description__show__toggle pdp-product__description__show__toggle__less">[${descriptionShowLessText}]</span>
+											</div>
+										</div>
+										<div class="pdp-product__more_result pdp-product__more_result__cream" data-result-for="${cream.includes('day') ? 'day' : 'night'}cream">
+											<h5>${cream.includes('day') ? moreDayCreamButtonText : moreNightCreamButtonText}</h5>
+										</div>
+									</div>
+								</div>
+								${inciSection}
+							</div>
+						</div>
+					</div>
+				`
+				);
+			});
 		}
+	}
 
 
 
@@ -1666,12 +1665,12 @@
 			}
 		}
 
-	//togglePageLoadingIndicator();
+	togglePageLoadingIndicator();
 	await toggleSubscriptionOption();
 	toggleSubscriptionSelect();
 	quizData = await loadQuizData();
 	await presetPersonalizedCreamProperties(quizData);
-	//togglePageLoadingIndicator();
+	togglePageLoadingIndicator();
 
 	let inciDataCalled = false;
 	var stickyCheckoutContainer = document.querySelector('.pdp-cta__sticky');
